# bvs

./: .bvsmodules  .clang_complete  .gitignore  .gitmodules  BVSConfig.txt  CMakeLists.txt  Changelog.txt  Doxyfile.in  License.txt  Readme.md  Readme.txt  Todo.md  Todo.txt  run  run.sh
android/: AndroidManifest.xml  BvsA.cpp  BvsA.h  CMakeLists.txt  Makefile  README.txt  Readme.md  config.cmake.sample
android/jni/: Android.mk  Application.mk  BvsA.cpp  BvsA.h
android/res/layout/: activity_main.xml  activity_view.xml
android/res/raw/: bvs.conf  ex  examplecv.conf  find  findball.conf
android/res/values/: strings.xml
android/src/com/cvhci/bvsa/: MainActivity.java  NeededLibs.java  ViewActivity.java
cmake/: bvs-macros.cmake  bvs-options.cmake
cmake/toolbox/: compiler.cmake  macros.cmake  toolbox.cmake
daemon/: .gitignore  CMakeLists.txt
daemon/src/: BVSDaemon.cc  bvsd.cc  bvsd.h
lib/: .gitignore  BVSConfig.txt  BVSConfig.txt.sample  CMakeLists.txt  Doxyfile  Doxyfile.in  bvs.conf  toolbox.cmake
lib/cmake/: compiler.cmake  macros.cmake  targets.cmake  toolbox.cmake
lib/include/: BVS.h  BVSConfig.h  BVSConnector.h  BVSLogger.h  BVSModule.h  BVSTraits.h
lib/include/bvs/: archutils.h  bvs.h  bvsinfo.h  config.h  connector.h  connectordata.h  droid.h  info.h  logger.h  module.h  traits.h  utils.h
lib/module/: .gitignore  BVSExampleModule.cc  BVSExampleModule.conf  BVSExampleModule.h  BVSExampleModuleConfig.txt  BVSExampleModuleConfig.txt.sample  CMakeLists.txt
lib/src/: BVS.cc  BVSConfig.cc  BVSConnector.cc  BVSControl.cc  BVSControl.h  BVSLoader.cc  BVSLoader.h  BVSLogSystem.cc  BVSLogSystem.h  BVSLogger.cc  BVSMaster.cc  BVSMaster.h  BVSModule.cc  BVSModuleData.cc  BVSModuleData.h  BVSModuleLoader.cc  BVSModuleLoader.h  BVSStreams.h  archutils.cc  archutils.h  barrier.cc  barrier.h  bvs.cc  bvsinfo.cc  config.cc  connector.cc  control.cc  control.h  controldata.h  droid.cc  info.cc  loader.cc  loader.h  logger.cc  logsystem.cc  logsystem.h  module.cc  moduledata.h  streams.h  utils.cc
modules/: CMakeLists.txt
modules/BVSExampleModule/: BVSExampleModule.cc  BVSExampleModule.h  CMakeLists.txt
modules/INPUT/: CMakeLists.txt  INPUT.cc  INPUT.h
modules/OUTPUT/: CMakeLists.txt  OUTPUT.cc  OUTPUT.h
modules/blur/: CMakeLists.txt  blur.cc  blur.h
modules/canny/: CMakeLists.txt  canny.cc  canny.h
modules/grey/: CMakeLists.txt  grey.cc  grey.h
modules/input/: CMakeLists.txt  input.cc  input.h
modules/test/: CMakeLists.txt  test.cc  test.h
modules/test2/: CMakeLists.txt  test2.cc  test2.h
